name:            java-adt
version:         0.2018.11.4
build-type:      Simple
cabal-version:   1.18
license:         OtherLicense
license-file:    LICENSE
author:          Andreas Abel
maintainer:      Andreas Abel <andreas.abel@gu.se>
homepage:        http://github.com/andreasabel/java-adt
bug-reports:     http://github.com/andreasabel/java-adt/issues
category:        Java
synopsis:        Create immutable algebraic data structures for Java.
description:
  A simple tool to create immutable algebraic data structures and visitors for Java
  (such as abstract syntax trees).  The input syntax is similar to Haskell data types,
  and they will be compiled to Java class hierarchies.

-- Compilation fails with GHC <= 7.4 since non-existing import is an error there:
-- import Prelude hiding ((<>))
tested-with:        GHC == 7.6.3
                    GHC == 7.8.4
                    GHC == 7.10.3
                    GHC == 8.0.2
                    GHC == 8.2.2
                    GHC == 8.4.4
                    GHC == 8.6.5
                    GHC == 8.8.4
                    GHC == 8.10.4
                    GHC == 9.0.1

data-files:         test/Makefile
                    test/*.hs

extra-source-files: CHANGELOG.md
                    README.md

source-repository head
  type:     git
  location: http://github.com/andreasabel/java-adt.git

executable java-adt
  hs-source-dirs:   src
  build-depends:    base >= 4.6 && < 5.0,
                    array,
                    pretty
  build-tools:      happy >= 1.15,
                    alex >= 3.0
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:    Lexer
                    Options
                    Parser
                    Printer
                    Syntax
