name:            java-adt
version:         1.0.20251105
build-type:      Simple
cabal-version:   2.0
license:         OtherLicense
license-file:    LICENSE
author:          Andreas Abel
maintainer:      Andreas Abel <andreas.abel@gu.se>
homepage:        https://github.com/andreasabel/java-adt
bug-reports:     https://github.com/andreasabel/java-adt/issues
category:        Java
synopsis:        Create immutable algebraic data structures for Java.
description:
  A simple tool to create immutable algebraic data structures and visitors for Java
  (such as abstract syntax trees).  The input syntax is similar to Haskell data types,
  and they will be compiled to Java class hierarchies.

tested-with:
  GHC == 9.12.2
  GHC == 9.10.3
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

data-files:
  test/Makefile
  test/*.hs

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/andreasabel/java-adt.git

executable java-adt

  -- Project definition
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Lexer
    Options
    Parser
    Printer
    Syntax
    String1
    Version
    Paths_java_adt
  autogen-modules:
    Paths_java_adt

  -- Dependencies
  build-depends:
      base >= 4.11 && < 5
    , array
    , pretty
  build-tool-depends:
      alex:alex   >= 3.0
    , happy:happy >= 1.15

  -- Haskell language settings
  default-language:
    Haskell2010
  default-extensions:
    LambdaCase
    PatternSynonyms
    FlexibleInstances
    TypeSynonymInstances
  ghc-options:
    -Wall
    -Wcompat
    -Wno-name-shadowing
    -Wno-unused-imports
